5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1644_1053.log
== TEST (2019-04-10 22:50:20) 
-- CODE:
x=input("leia o nome do patrono:")

if (x == cervo):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem"x nao eh patrono do Harry Potter"
-- ERROR:
File "XXXX", line 6
    mensagem"x nao eh patrono do Harry Potter"
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:50:33) 
-- CODE:
x=input("leia o nome do patrono:")

if (x == cervo):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem"x nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 6
    mensagem"x nao eh patrono do Harry Potter"
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:50:39) 
-- CODE:
x=input("leia o nome do patrono:")

if (x == cervo):
	mensagem="cervo eh patrono do Harry Potter"
else:
	mensagem="x nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:51:57) 
-- CODE:
x=input("leia o nome do patrono:")

if (x == cervo):
	mensagem="cervo eh patrono do Harry Potter"

print(mensagem)
-- EXECUTION TIME:
0.141775
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:51:58) 
-- CODE:
x=input("leia o nome do patrono:")

if (x == cervo):
	mensagem="cervo eh patrono do Harry Potter"

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:52:27) 
-- CODE:
x=input("leia o nome do patrono:")

if (x==cervo):
	mensagem="cervo eh patrono do Harry Potter"

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:52:49) 
-- CODE:
x=input("leia o nome do patrono:")
y=cervo
if (x==y):
	mensagem="cervo eh patrono do Harry Potter"

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:52:52) 
-- CODE:
x=input("leia o nome do patrono:")
y=cervo
if (x==y):
	mensagem="cervo eh patrono do Harry Potter"

print(mensagem)
-- EXECUTION TIME:
0.180343
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 2, in <module>
    y=cervo
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:52:56) 
-- CODE:
x=input("leia o nome do patrono:")
y=cervo
if (x==y):
	mensagem="cervo eh patrono do Harry Potter"

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:53:56) 
-- CODE:
x=input("leia o nome do patrono:")

if (x==y):
	mensagem="cervo eh patrono do Harry Potter"

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x==y):
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:54:05) 
-- CODE:
x=input("leia o nome do patrono:")

if (x==cervo):
	mensagem="cervo eh patrono do Harry Potter"

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:54:20) 
-- CODE:
x=input("leia o nome do patrono:")

if (x=="cervo"):
	mensagem="cervo eh patrono do Harry Potter"

print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:54:51) 
-- CODE:
x=input("leia o nome do patrono:")

if (x == cervo):
	mensagem = "cervo eh patrono do Harry Potter"

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:55:25) 
-- CODE:
x=input("leia o nome do patrono:")

if (x == cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem="x nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:57:08) 
-- CODE:
x=input("leia o nome do patrono:")

if (x == cervo):
	print = "cervo eh patrono do Harry Potter"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:57:58) 
-- CODE:
x=input("leia o nome do patrono:")
r=cervo
if (x == r):
	print = "cervo eh patrono do Harry Potter"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r=cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:58:19) 
-- CODE:
x=input("leia o nome do patrono:")
r="cervo"
if (x == r):
	print = "cervo eh patrono do Harry Potter"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    r=cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:58:53) 
-- CODE:
x=input("leia o nome do patrono:")
r="cervo"
if (x == r):
	mensagem = "cervo eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:59:26) 
-- CODE:
x=("leia o nome do patrono:")
r="cervo"
if (x == r):
	mensagem = "cervo eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:59:26) 
-- CODE:
x=("leia o nome do patrono:")
r="cervo"
if (x == r):
	mensagem = "cervo eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:59:28) 
-- CODE:
x=("leia o nome do patrono:")
r="cervo"
if (x == r):
	mensagem = "cervo eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:59:32) 
-- CODE:
x=("leia o nome do patrono:")
r="cervo"
if (x == r):
	mensagem = "cervo eh patrono do Harry Potter"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:01:48) 
-- CODE:
x=float("leia o nome do patrono")

if (x == cervo):
	mensagem= "cervo eh patrono do Harry Potter"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float("leia o nome do patrono")
ValueError: could not convert string to float: 'leia o nome do patrono'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:01:48) 
-- CODE:
x=float("leia o nome do patrono")

if (x == cervo):
	mensagem= "cervo eh patrono do Harry Potter"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float("leia o nome do patrono")
ValueError: could not convert string to float: 'leia o nome do patrono'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:02:00) 
-- CODE:
x=("leia o nome do patrono")

if (x == cervo):
	mensagem= "cervo eh patrono do Harry Potter"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:02:10) 
-- CODE:
x=input("leia o nome do patrono")

if (x == cervo):
	mensagem= "cervo eh patrono do Harry Potter"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:02:23) 
-- CODE:
x=input("leia o nome do patrono:")

if (x == cervo):
	mensagem= "cervo eh patrono do Harry Potter"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:02:28) 
-- CODE:
x=input("leia o nome do patrono:")

if (x == cervo):
	mensagem= "cervo eh patrono do Harry Potter"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (x == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:32:12) 
-- CODE:
var=input("nome do patrono:")

if (var == cervo):
	mensagem= "cervo eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (var == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:32:59) 
-- CODE:
var=input("nome do patrono:")
cervo = 1
if (var == 1):
	mensagem= "cervo eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:33:13) 
-- CODE:
var=input("nome do patrono:")
cervo = 1
if (var == 1):
	mensagem= "cervo eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:36:23) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:37:50) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else
	mensagem=" asno nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:37:55) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem=" asno nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:38:01) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem=" asno nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.195096
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asno nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:38:16) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem=" <entrada> nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:38:44) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem=" 'var' nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:38:57) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem="nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:39:01) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem="nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.235509
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:39:46) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem="asno""nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:39:57) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem="asno" "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:39:58) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem="asno" "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.169999
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asnonao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:39:58) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem="asno" "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:40:13) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem="asno" "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.217942
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asnonao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:42:08) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:42:45) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= (var)"nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 6
    mensagem= (var)"nao eh patrono do Harry Potter"
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:43:05) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "<var> nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:43:25) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "'var' nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:44:27) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
if (var != "cervo")
	mensagem= "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if (var != "cervo")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:44:32) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
if (var != "cervo"):
	mensagem= "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:44:36) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
if (var != "cervo"):
	mensagem= "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.226002
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:44:42) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
if (var != "cervo"):
	mensagem= "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:44:42) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
if (var != "cervo"):
	mensagem= "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:47:49) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "asno" + "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:49:36) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
mensagem= "asno " + mensagem
print(mensagem)
-- OUTPUT:
asno cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:49:42) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
mensagem= "asno " + mensagem
print(mensagem)
-- EXECUTION TIME:
0.156154
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
asno cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asno nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:49:46) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
mensagem= "asno " + mensagem
print(mensagem)
-- OUTPUT:
asno cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:51:05) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
mensagem= var + mensagem
print(mensagem)
-- OUTPUT:
cervocervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:51:18) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
mensagem= var + mensagem
print(mensagem)
-- EXECUTION TIME:
0.277448
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervocervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:52:25) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
mensagem= "asno " + mensagem
print(mensagem)
-- OUTPUT:
asno cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:52:33) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
mensagem= "asno " + mensagem
print(mensagem)
-- EXECUTION TIME:
0.139315
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
asno cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asno nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:25:30) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
	mensagem= "asno " + mensagem
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:25:37) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
	mensagem= "asno " + mensagem
print(mensagem)
-- EXECUTION TIME:
0.20074
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asno nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:25:43) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
mensagem= "asno " + mensagem
print(mensagem)
-- OUTPUT:
asno cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:25:47) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
mensagem= "asno " + mensagem
print(mensagem)
-- EXECUTION TIME:
0.125636
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
asno cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asno nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:25:52) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
mensagem= "asno " + mensagem
print(mensagem)
-- OUTPUT:
asno cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:25:57) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
mensagem= "asno " + mensagem
print(mensagem)
-- EXECUTION TIME:
0.137423
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
asno cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asno nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:28:41) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
	mensagem= "asno " + mensagem
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:28:49) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
	mensagem= "asno " + mensagem
print(mensagem)
-- EXECUTION TIME:
0.267125
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asno nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:29:49) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
	mensagem= var + mensagem
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:30:01) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
	mensagem= var + mensagem
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:30:06) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
	mensagem= var + mensagem
print(mensagem)
-- EXECUTION TIME:
0.154845
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:30:47) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= var + "nao eh patrono do Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:30:53) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= var + "nao eh patrono do Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.154844
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:31:01) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= var + "nao eh patrono do Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:31:26) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "asno" + "nao eh patrono do Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:31:32) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "asno" + "nao eh patrono do Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:31:41) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "asno " + "nao eh patrono do Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:31:46) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "asno " + "nao eh patrono do Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.189931
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asno nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:31:58) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "asno " + "nao eh patrono do Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:32:03) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "asno " + "nao eh patrono do Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:32:08) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "asno " + "nao eh patrono do Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.171635
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asno nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:32:17) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "asno " + "nao eh patrono do Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:32:36) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "asno " + "nao eh patrono do Harry Potter"
	
	print(mensagem) 
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:32:40) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= "asno " + "nao eh patrono do Harry Potter"
	
	print(mensagem) 
-- EXECUTION TIME:
0.229348
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
asno nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:33:45) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= var + "nao eh patrono do Harry Potter"
	
print(mensagem) 
-- EXECUTION TIME:
0.147992
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:33:46) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= var + "nao eh patrono do Harry Potter"
	
print(mensagem) 
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:33:56) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= var + "nao eh patrono do Harry Potter"
	
print(mensagem) 
-- EXECUTION TIME:
0.211693
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:22:52) 
-- CODE:
var=input("nome do patrono:")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem=  (var,"nao eh patrono do Harry Potter")
	
print(mensagem) 
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
